# pipeline_empresas_brasil

./: LICENSE  README.md  docker-compose.yml  init.sh
database/: Dockerfile  create_empresas_table.sql  docker-compose.yml
pipeline_empresas_brasil/: Dockerfile  pyproject.toml
pipeline_empresas_brasil/logs/: logs.txt
pipeline_empresas_brasil/pipeline_empresas_brasil/: bronze.py  logs_decorator.py  main.py  silver.py
pipeline_empresas_brasil/pipeline_empresas_brasil/src/: bronze.py  logs_decorator.py  main.py  silver.py
pipeline_empresas_brasil/src/: bronze.py  camadas.py  database.py  entrypoint.sh  gold.py  logs_decorator.py  main.py  silver.py  teste.py
pipeline_empresas_brasil/tests/: teste_bronze.py
src/: bronze.py  logs_decorator.py  main.py
