[tool.poetry]
name = "pipeline-empresas-brasil"
version = "0.1.0"
description = ""
authors = ["Michel Caiafa <michel.caiafa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]

run = "python pipeline_empresas_brasil/src/main.py"
lint = "black ."
