[tool.poetry]
name = "pipeline-empresas-brasil"
version = "0.1.0"
description = ""
authors = ["Michel Caiafa <michel.caiafa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.taskipy.tasks]

run = "python pipeline_empresas_brasil/main.py"
lint = "black . && isort"
